assets/css/2010s.css
/* Add styles to all elements */
* {
	margin: 0;
	/* remove default margin from all elements */
	padding: 0;
	/* remove default padding from all elements */
	box-sizing: border-box;
	/* fix width calculation, more info here: https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/box-sizing */
}

/* Write your CSS below (feel free to change the styles already here) */
@font-face {
	font-family: "Google Sans";
	src: url("../fonts/GoogleSans_17pt-Regular.ttf");
}

.navbar {
	display: flex;
	gap: 10px;
	border: 5px double darkorchid;
	padding: 10px;
	border-radius: 10px;
	font-family: monospace;
	background-color: rgba(255, 255, 255, 0.609);
	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

.spacer {
	flex-grow: 1;
}

head {
	padding: 10px;
}

body {
	background: url('https://img.freepik.com/free-vector/watercolor-ombre-gradient-pattern-design_23-2149666272.jpg?semt=ais_hybrid&w=740&q=80') no-repeat center center fixed;
	background-size: cover;
	font-family: "Google Sans";
	padding: 50px;
	color: black;
	backdrop-filter: blur(10px);
	-webkit-backdrop-filter: blur(10px);
}


.Title {
	padding: 20px;
	max-width: 800px;
	
}

.Question {
	font-family: "Google Sans";
	display: flex;
	font-size: 28px;
	margin: 30px auto;
	max-width: 250px;
	background-color: #f8ff79;
	justify-content: center;
	align-items: center;
	height: 50px;
	position: relative;
	animation-name: box-story;
	animation-duration: 10s;
	animation-iteration-count: infinite;
	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
	border-radius: 12px;
}

.Question1 {
	font-family: "Google Sans";
	display: flex;
	font-size: 28px;
	margin: 30px auto;
	max-width: 250px;
	background-color: #ffb7de;
	justify-content: center;
	align-items: center;
	height: 50px;
	position: relative;
	animation-name: box-story1;
	animation-duration: 10s;
	animation-iteration-count: infinite;
	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
	border-radius: 12px;

}

@keyframes box-story {
	0% {left: -200px;}

	50% {left: 200px;}

	100% {left: -200px;}
}

@keyframes box-story1 {
	0% {left: 200px;}

	50% {left: -200px;
}

	100% {left: 200px;}
}


.Quote {
	font-size: 28px;
	padding: 5px;
	gap: 5px;
	margin: 30px auto;
	max-width: 750px;
	text-align: center;
	line-height: 1.3;
	border: 3px dotted rgb(118, 190, 118);
	padding: 40px;
	border-radius: 12px;
	background-color: white;
	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}


.highlight {
	background-color: #cdffb0;
	transition: ease-in-out 1s;
}

.highlight:hover {
	font-size: 40px;
}

.Heading {
	font-family: monospace;
	padding: 30px;
	max-width: 580px;
	text-align: center;
	margin: 15px auto;
	font-size: 18px;
	background-color: rgba(255, 255, 255, 0.7);
	border: 5px double darkorchid;
	border-radius: 12px;
}

.Heading:hover{
	transform: scale(1.1, 1.1);
	transition: ease-in-out .7s;
}

.box {
	padding: 40px;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	gap: 90px;
	max-width: 990px;
	margin: 0 auto;
}

.box-link {
	background-color: none;
	border: 5px solid rgb(140, 21, 120);
	border-radius: 12px;
	color: black;
	text-decoration: none;
	padding: 20px;
	display: flex;
	flex-direction: column;
	gap: 20px;
	font-family: monospace;
	background-color: white;
	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);


}

.box-link img {
	width: 100%;
}

.box-link h2 {
	font-size: 18px;
}

@media only screen and (max-width: 800px) {
	.box {
		grid-template-columns: 1fr 1fr;
	}
}

@media only screen and (max-width: 600px) {
	.box {
		grid-template-columns: 1fr;
	}
}

.box-link:hover {
	transform: scale(1.1, 1.1);
	box-shadow: 8px 8px 0px rgb(136, 12, 111);
	transition: all .3s;
}

.star
{
    position: absolute;
    top: -20px;
    color: rgb(255, 240, 242);
    animation: animate 5s linear infinite;
	pointer-events: none;
}
.star::before
{
    content: '\f031';
    font-family: fontAwesome;
    font-family: fontAwesome;
    text-shadow: 0 0 5px lightpink,
    0 0 20px lightpink,
    0 0 50px lightpink;
}

@keyframes animate
{
    0%
    {
        transform: translateY(0) rotate(0deg);
        opacity: 1;
    }
    80%
    {
        opacity: 1;
    }
    100%
    {
        transform: translateY(100vh) rotate(360deg);
        opacity: 0;
    }
}

